[package]
name = "hub-sdk"
version = "0.3.5"
authors = ["James Munns <james@geeny.io>"]
license = "MPL-2.0"
readme = "README.md"
description = "Geeny Linux Hub SDK"
documentation = "https://docs.rs/hub-sdk"
repository = "https://github.com/geeny/linux-hub-sdk"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.10"

rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"

log = "0.3"
env_logger = "0.4"
mvdb = "0.2"
geeny-api = "0.2"

[dependencies.uuid]
version = "0.5"
features = ["serde", "v4"]

[dependencies.rumqtt]
version = "0.10"
path = "vendor/rumqtt"

[features]
system-alloc = []
