[package]
name = "hub-sdk"
version = "0.4.2"
authors = ["James Munns <james@geeny.io>"]
license = "MPL-2.0"
readme = "README.md"
description = "Geeny Linux Hub SDK"
documentation = "https://docs.geeny.io/sdk/hub-sdk/hub_sdk"
repository = "https://github.com/geeny/linux-hub-sdk"

[[bin]]
name = "hub-service"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.10"
rumqtt = "=0.10.1"

rocket = { version = "0.3.0", optional = true }
rocket_codegen = { version = "0.3.0", optional = true }
rocket_contrib = { version = "0.3.0", optional = true }

hyper = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
futures = { version = "0.1", optional = true }

log = "0.3"
env_logger = "0.4"
mvdb = "0.2"
geeny-api = "0.3"

[dependencies.uuid]
version = "0.5"
features = ["serde", "v4"]

[features]
default = ["rest-hyper-service"]

system-alloc = []
rest-rocket-service = ["rocket", "rocket_codegen", "rocket_contrib"]
rest-hyper-service = ["hyper", "serde_json", "futures"]

[package.metadata.docs.rs]
all-features = true
